--- a/package.xml
+++ b/package.xml
@@ -3,14 +3,20 @@
 <package format="3">
   <name>robot_communication</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Robot communication package with Vision, Voice, Motion and Master nodes</description>
   <maintainer email="liuyuxin070805@163.com">liuyuxin</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>rclcpp_action</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
